Add example for usage with angular components.

--- a/src/app/components/root/app.component.html
+++ b/src/app/components/root/app.component.html
@@ -45,6 +45,11 @@
          routerLinkActive="active">
         Grouped Drag and Drop
       </a>
+      <a clrVerticalNavLink
+         routerLink="./angularcomponent"
+         routerLinkActive="active">
+        Angular component
+      </a>
     </clr-vertical-nav>
   </div>
 </div>
